Fix invisible svg icons

--- a/examples/api-samples/src/browser/style/branding.css
+++ b/examples/api-samples/src/browser/style/branding.css
@@ -27,3 +27,8 @@
     background-repeat: no-repeat;
     background-size: 15%;
 }
+
+.unclosable-window-icon {
+    -webkit-mask: url('window-icon.svg');
+    mask: url('window-icon.svg');
+}
